2012-02-15  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-coalesce.c (lra_coalesce): Check the split pseudos too.

2012-02-14  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (choose_split_class ): Pass hard_regno instead
	of its class.  Check that the class containts hard_regno.
	(split_pseudo): Reject splitting if choose_split_class returns
	NO_REGS.

2012-02-13  Vladimir Makarov  <vmakarov@redhat.com>

	* lra.c (check_rtl): Ignore addr with UNSPEC.

2012-02-10  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (struct lra_reg): New member call_p.

	* lra-lives.c (lra_create_live_ranges): Clear call_p for the pseudo.
	(process_bb_lives): Setup call_p.

	* lra-assigns.c (find_hard_regno_for): Add code to setup and use
	impossible_start_hard_regs.
	(setup_live_pseudos_and_spill_after_risky): Consider
	conflict_hard_regs to.
	(lra_assign): Add checking pseudos crossing calls and using call
	used hard regs.

	* lra-constraints.c (extract_loc_address_regs): Fix the typo in
	using code1 instead of code0.
	(exchange_plus_ops): New function.
	(process_address): Use it.
	(split_pseudo): Rename and change semantics of the first
	parameter.
	(inherit_in_ebb): Process only output non-subreg pseudos as
	a definition for the split.  In this case don't invalidate usages
	for splitting.  Always add usage insn for splitting in case of
	used pseudos or defined subregs of multi-reg pseudos.

2012-01-27  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (lra_risky_equiv_subst_p): Rename to
	lra_risky_transformations_p.

	* lra-constraints.c: Ditto.
	(inherit_in_ebb): When splitting pseudo subreg, set up
	lra_risky_transformations_p.  Process subreg of multi-register
	pseudo as input too.

	* lra-assigns.c (setup_live_pseudos_and_spill_after_equiv_moves):
	Rename to setup_live_pseudos_and_spill_after_risky_transforms.

2011-12-23  Vladimir Makarov  <vmakarov@redhat.com>

	* lra.c (update_auto_inc_notes): Rename to update_reg_notes.  Make